# HitoVox

./: BUILD_INSTRUCTIONS.txt
HitoVox_GitHubRepo_calamineent-Mo/: CMakeLists.txt  README.md
HitoVox_GitHubRepo_calamineent-Mo/scripts/: nsis_installer_template.nsi
